--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -53,8 +53,9 @@
         </div>
 
         <ul class="list-unstyled components">
-          <p>Dummy Heading</p>
-          <li class="active">
+          
+          <p>John Doe</p>
+          <li>
             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false"
               >Home</a
             >
@@ -98,16 +99,16 @@
         <ul class="list-unstyled CTAs">
           <li>
             <a
-              href="https://bootstrapious.com/tutorial/files/sidebar.zip"
-              class="download"
-              >Download source</a
+              href="{% url 'Profile' %}"
+              class="article"
+              >Profile</a
             >
           </li>
           <li>
             <a
-              href="https://bootstrapious.com/p/bootstrap-sidebar"
+              href="#"
               class="article"
-              >Back to article</a
+              >Log Out</a
             >
           </li>
         </ul>
@@ -136,7 +137,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Page</a>
+                  <a class="nav-link" href="{% url 'Profile' %}">Profile</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Page</a>
